main.tf
terraform {
 required_providers {
   aws = {
     source = "hashicorp/aws"
     version = "~> 4.16"
   }
 }
 required_version = ">= 1.2.0"
}
provider "aws" {
 region = "ap-south-2"
}
resource "aws_instance" "example" {
 ami = "ami-090b9c8aa1c84aefc"
 instance_type = "t3.micro"
 vpc_security_group_ids = [aws_security_group.example.id]
 tags = {
   Name = "ExampleInstance"
 }
 }
 resource "aws_security_group" "example" {
name = "example-sg"
description = "Security group for example application"
vpc_id = "vpc-0731d32ac0d5bdf6b"

# Ingress Rules (Inbound Traffic)
ingress {
description = "Allow HTTP traffic"
from_port = 80
to_port = 80
protocol = "tcp"
cidr_blocks = ["0.0.0.0/0"]
}
ingress {
description = "Allow SH traffic"
from_port = 22
to_port = 22
protocol = "tcp"
cidr_blocks = ["0.0.0.0/0"]
}
}
